tests/dmd/fail_compilation/diag6743.d
/*
LDC: no additional output lines (`run `dmd` to print the compiler manual`, `run 'dmd -man' to open browser on manual`)
REQUIRED_ARGS: -run test.exe
TEST_OUTPUT:
---
Error: -run must be followed by a source file, not 'test.exe'
---
*/
